Bug 330013, Dragging a link to the tab bar opens in the currently focused tab, not a new tab, r+sr=bz